# src/modules/specification/infra/specifications.routes.ts
@@ -1,5 +1,7 @@
 import { Router } from 'express';
 
+import { ensureAuthenticated } from '@shared/middlewares/ensureAuthenticated';
+
 import { CreateSpecificationController } from '../useCases/CreateSpecification/CreateSpecificationController';
 import { FindAllSpecificationsController } from '../useCases/FindAllSpecifications/FindAllSpecificationsController';
 
@@ -7,6 +9,8 @@ export const specificationsRouter = Router();
 
 const createSpecificationController = new CreateSpecificationController();
 const findAllSpecificationsController = new FindAllSpecificationsController();
+
+specificationsRouter.use(ensureAuthenticated);
 
 specificationsRouter.post('/', createSpecificationController.handle);
 
