# src/shared/infra/swagger.json
@@ -50,7 +50,8 @@
               }
             }
           }
-        }
+        },
+        "security":[]
       },
       "get": {
         "tags": [
@@ -125,10 +126,16 @@
           "401": {
             "description": "Invalid login credentials"
           }
-        }
+        },
+        "security": []
       }
     },
     "/categories": {
+      "security": [
+        {
+          "BearerAuth": []
+        }
+      ],
       "post": {
         "tags": [
           "Category"
@@ -499,6 +506,18 @@
           }
         }
       }
+    },
+    "securitySchemes": {
+      "BearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
     }
-  }
+  },
+  "security": [
+    {
+      "BearerAuth": []
+    }
+  ]
 }
